--- a/package.json
+++ b/package.json
@@ -1,71 +1,73 @@
 {
-  "name": "debridui",
-  "version": "0.1.0",
-  "private": true,
-  "license": "GPL-3.0-or-later",
-  "author": "Adnan Ahmad <viperadnan@gmail.com>",
-  "description": "A modern, fast, and secure debrid client built with Next.js, Tailwind CSS, and TypeScript.",
-  "keywords": [
-    "debrid",
-    "client",
-    "nextjs",
-    "tailwindcss",
-    "typescript"
-  ],
-  "homepage": "https://debridui.viperadnan.com",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/viperadnan-git/debridui"
-  },
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@bprogress/next": "^3.2.12",
-    "@hookform/resolvers": "^5.2.1",
-    "@radix-ui/react-alert-dialog": "^1.1.15",
-    "@radix-ui/react-avatar": "^1.1.10",
-    "@radix-ui/react-checkbox": "^1.3.3",
-    "@radix-ui/react-collapsible": "^1.1.12",
-    "@radix-ui/react-dialog": "^1.1.15",
-    "@radix-ui/react-dropdown-menu": "^2.1.16",
-    "@radix-ui/react-label": "^2.1.7",
-    "@radix-ui/react-select": "^2.2.6",
-    "@radix-ui/react-separator": "^1.1.7",
-    "@radix-ui/react-slot": "^1.2.3",
-    "@radix-ui/react-switch": "^1.2.6",
-    "@radix-ui/react-tooltip": "^1.2.8",
-    "@tanstack/react-query": "^5.85.0",
-    "@tanstack/react-query-persist-client": "^5.85.3",
-    "@tanstack/react-table": "^8.21.3",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "date-fns": "^4.1.0",
-    "idb-keyval": "^6.2.2",
-    "lucide-react": "^0.539.0",
-    "next": "15.4.6",
-    "next-themes": "^0.4.6",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "react-hook-form": "^7.62.0",
-    "sonner": "^2.0.7",
-    "tailwind-merge": "^3.3.1",
-    "zod": "^4.0.17",
-    "zustand": "^5.0.7"
-  },
-  "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.4.6",
-    "tailwindcss": "^4",
-    "tw-animate-css": "^1.3.6",
-    "typescript": "^5"
-  }
+    "name": "debridui",
+    "version": "0.1.0",
+    "private": true,
+    "license": "GPL-3.0-or-later",
+    "author": "Adnan Ahmad <viperadnan@gmail.com>",
+    "description": "A modern, fast, and secure debrid client built with Next.js, Tailwind CSS, and TypeScript.",
+    "keywords": [
+        "debrid",
+        "client",
+        "nextjs",
+        "tailwindcss",
+        "typescript"
+    ],
+    "homepage": "https://debridui.viperadnan.com",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/viperadnan-git/debridui"
+    },
+    "scripts": {
+        "dev": "next dev --turbopack",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint",
+        "prettier": "prettier --write . --ignore-path .gitignore"
+    },
+    "dependencies": {
+        "@bprogress/next": "^3.2.12",
+        "@hookform/resolvers": "^5.2.1",
+        "@radix-ui/react-alert-dialog": "^1.1.15",
+        "@radix-ui/react-avatar": "^1.1.10",
+        "@radix-ui/react-checkbox": "^1.3.3",
+        "@radix-ui/react-collapsible": "^1.1.12",
+        "@radix-ui/react-dialog": "^1.1.15",
+        "@radix-ui/react-dropdown-menu": "^2.1.16",
+        "@radix-ui/react-label": "^2.1.7",
+        "@radix-ui/react-select": "^2.2.6",
+        "@radix-ui/react-separator": "^1.1.7",
+        "@radix-ui/react-slot": "^1.2.3",
+        "@radix-ui/react-switch": "^1.2.6",
+        "@radix-ui/react-tooltip": "^1.2.8",
+        "@tanstack/react-query": "^5.85.0",
+        "@tanstack/react-query-persist-client": "^5.85.3",
+        "@tanstack/react-table": "^8.21.3",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
+        "date-fns": "^4.1.0",
+        "idb-keyval": "^6.2.2",
+        "lucide-react": "^0.539.0",
+        "next": "15.4.6",
+        "next-themes": "^0.4.6",
+        "react": "19.1.0",
+        "react-dom": "19.1.0",
+        "react-hook-form": "^7.62.0",
+        "sonner": "^2.0.7",
+        "tailwind-merge": "^3.3.1",
+        "zod": "^4.0.17",
+        "zustand": "^5.0.7"
+    },
+    "devDependencies": {
+        "@eslint/eslintrc": "^3",
+        "@tailwindcss/postcss": "^4",
+        "@types/node": "^20",
+        "@types/react": "^19",
+        "@types/react-dom": "^19",
+        "eslint": "^9",
+        "eslint-config-next": "15.4.6",
+        "prettier": "^3.6.2",
+        "tailwindcss": "^4",
+        "tw-animate-css": "^1.3.6",
+        "typescript": "^5"
+    }
 }
