--- a/package.json
+++ b/package.json
@@ -39,12 +39,16 @@
         "@radix-ui/react-slot": "^1.2.3",
         "@radix-ui/react-switch": "^1.2.6",
         "@radix-ui/react-tooltip": "^1.2.8",
-        "@tanstack/react-query": "^5.85.0",
+        "@tanstack/react-query": "^5.85.3",
         "@tanstack/react-query-persist-client": "^5.85.3",
         "@tanstack/react-table": "^8.21.3",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "cmdk": "^1.1.1",
         "date-fns": "^4.1.0",
+        "embla-carousel-autoplay": "^8.6.0",
+        "embla-carousel-class-names": "^8.6.0",
+        "embla-carousel-react": "^8.6.0",
         "idb-keyval": "^6.2.2",
         "lucide-react": "^0.539.0",
         "next": "15.4.6",
