--- a/.prettierrc
+++ b/.prettierrc
@@ -5,5 +5,6 @@
     "trailingComma": "es5",
     "endOfLine": "lf",
     "arrowParens": "always",
-    "bracketSameLine": true
+    "bracketSameLine": true,
+    "printWidth": 120
 }
