--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
         "react-dom": "19.1.0",
         "react-dropzone": "^14.3.8",
         "react-hook-form": "^7.62.0",
+        "react-window": "^1.8.11",
         "sonner": "^2.0.7",
         "tailwind-merge": "^3.3.1",
         "zod": "^4.0.17",
@@ -68,6 +69,7 @@
         "@types/node": "^20",
         "@types/react": "^19",
         "@types/react-dom": "^19",
+        "@types/react-window": "^1.8.8",
         "eslint": "^9",
         "eslint-config-next": "15.4.6",
         "prettier": "^3.6.2",
