--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "embla-carousel-autoplay": "^8.6.0",
         "embla-carousel-react": "^8.6.0",
         "embla-carousel-wheel-gestures": "^8.1.0",
+        "fuse.js": "^7.1.0",
         "idb-keyval": "^6.2.2",
         "lucide-react": "^0.539.0",
         "next": "15.4.6",
