--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
         "url": "https://github.com/viperadnan-git/debridui"
     },
     "scripts": {
-        "dev": "next dev --turbopack",
+        "dev": "next dev",
         "build": "next build",
         "start": "next start",
         "lint": "next lint",
@@ -54,10 +54,10 @@
         "fuse.js": "^7.1.0",
         "idb-keyval": "^6.2.2",
         "lucide-react": "^0.539.0",
-        "next": "15.5.7",
+        "next": "16.0.10",
         "next-themes": "^0.4.6",
-        "react": "19.1.0",
-        "react-dom": "19.1.0",
+        "react": "19.2.3",
+        "react-dom": "19.2.3",
         "react-dropzone": "^14.3.8",
         "react-hook-form": "^7.68.0",
         "react-window": "^1.8.11",
@@ -68,17 +68,21 @@
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3.3.3",
-        "@tailwindcss/postcss": "^4.1.17",
-        "@types/node": "^20.19.25",
-        "@types/react": "^19.2.7",
-        "@types/react-dom": "^19.2.3",
+        "@tailwindcss/postcss": "^4.1.18",
+        "@types/node": "^20.19.27",
+        "@types/react": "19.2.7",
+        "@types/react-dom": "19.2.3",
         "@types/react-window": "^1.8.8",
-        "eslint": "^9.39.1",
-        "eslint-config-next": "15.4.6",
+        "eslint": "^9.39.2",
+        "eslint-config-next": "16.0.10",
         "prettier": "^3.7.4",
-        "shadcn": "^3.5.1",
-        "tailwindcss": "^4.1.17",
+        "shadcn": "^3.6.1",
+        "tailwindcss": "^4.1.18",
         "tw-animate-css": "^1.4.0",
         "typescript": "^5.9.3"
+    },
+    "overrides": {
+        "@types/react": "19.2.7",
+        "@types/react-dom": "19.2.3"
     }
 }
