--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
         "dev": "next dev",
         "build": "next build",
         "start": "next start",
-        "lint": "next lint",
+        "lint": "eslint . --ext ts,tsx --fix",
         "prettier": "prettier --write . --ignore-path .gitignore",
-        "typecheck": "tsc --noEmit"
+        "typecheck": "tsc --noEmit",
+        "update": "bunx next upgrade && bun update"
     },
     "dependencies": {
         "@bprogress/next": "^3.2.12",
