--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
         "dev": "next dev",
         "build": "next build",
         "start": "next start",
-        "lint": "eslint . --ext ts,tsx --fix",
+        "lint": "tsc --noEmit && eslint .",
+        "lint:fix": "eslint . --fix",
+        "lint:eslint": "eslint .",
+        "lint:types": "tsc --noEmit",
         "prettier": "prettier --write . --ignore-path .gitignore",
         "typecheck": "tsc --noEmit",
         "update": "bunx next upgrade && bun update"
