feat: implementation of auth

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-# Trakt.tv client ID for media discovery 
+# Trakt.tv client ID for media discovery
 NEXT_PUBLIC_TRAKT_CLIENT_ID=""
 # CORS proxy URL for external API requests
 NEXT_PUBLIC_CORS_PROXY_URL=""
@@ -6,3 +6,13 @@ NEXT_PUBLIC_CORS_PROXY_URL=""
 NEXT_PUBLIC_DISCORD_URL=""
 # Optional: Analytics script URL
 NEXT_PUBLIC_ANALYTICS_SCRIPT=""
+
+# Database configuration (PostgreSQL)
+# Format: postgresql://USER:PASSWORD@HOST:PORT/DATABASE
+DATABASE_URL="postgresql://user:password@localhost:5432/debridui"
+
+# Better Auth configuration
+# Generate a secret with: openssl rand -base64 32
+BETTER_AUTH_SECRET=""
+BETTER_AUTH_URL="http://localhost:3000"
+NEXT_PUBLIC_BETTER_AUTH_URL="http://localhost:3000"
