--- a/package.json
+++ b/package.json
@@ -48,10 +48,12 @@
         "@radix-ui/react-tooltip": "^1.2.8",
         "@tanstack/react-query": "^5.90.20",
         "@tanstack/react-query-persist-client": "^5.90.22",
+        "better-auth": "^1.4.17",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "cmdk": "^1.1.1",
         "date-fns": "^4.1.0",
+        "drizzle-orm": "^0.45.1",
         "embla-carousel-autoplay": "^8.6.0",
         "embla-carousel-react": "^8.6.0",
         "embla-carousel-wheel-gestures": "^8.1.0",
@@ -60,6 +62,7 @@
         "lucide-react": "^0.539.0",
         "next": "16.1.4",
         "next-themes": "^0.4.6",
+        "postgres": "^3.4.8",
         "react": "19.2.3",
         "react-dom": "19.2.3",
         "react-dropzone": "^14.3.8",
@@ -76,6 +79,7 @@
         "@types/react": "19.2.8",
         "@types/react-dom": "19.2.3",
         "@types/react-window": "^1.8.8",
+        "drizzle-kit": "^0.31.8",
         "eslint": "^9.39.2",
         "eslint-config-next": "16.1.4",
         "prettier": "^3.8.1",
