--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
         "prettier": "^3.8.1",
         "shadcn": "^3.7.0",
         "tailwindcss": "^4.1.18",
+        "tw-animate-css": "^1.4.0",
         "typescript": "^5.9.3"
     },
     "overrides": {
