--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
         "react-window": "^1.8.11",
         "sonner": "^2.0.7",
         "tailwind-merge": "^3.4.0",
+        "uuid": "^13.0.0",
         "zod": "^4.3.6",
         "zustand": "^5.0.10"
     },
