feat: add Google OAuth and password management for OAuth users
- Add optional Google sign-in (enabled via env vars)
- Create GoogleSignInButton component for login/signup
- Implement setPassword for OAuth users without passwords
- Add useHasPassword hook with React Query
- Support both change password (existing) and set password (new)
- Update settings page to detect and handle password state

--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,10 @@ DATABASE_URL="postgresql://user:password@localhost:5432/debridui"
 # Better Auth configuration
 # Generate a secret with: openssl rand -base64 32
 BETTER_AUTH_SECRET=""
+
+# Optional: Google OAuth configuration
+# Get credentials from: https://console.cloud.google.com/apis/credentials
+# Client ID is public and used in OAuth flows
+NEXT_PUBLIC_GOOGLE_CLIENT_ID=""
+# Client secret is server-side only
+GOOGLE_CLIENT_SECRET=""
