feat: add email signup toggle and improve auth UX
- Add NEXT_PUBLIC_DISABLE_EMAIL_SIGNUP env variable to disable email/password signup
- Implement NavUser component in sidebar with account, settings, and logout options
- Add logout confirmation dialog for better UX
- Fix mobile overflow in account settings page with min-w-0 and text truncation
- Restructure signup page layout with grid and bottom footer
- Add separators to login/signup pages for better visual hierarchy
- Remove redundant page header actions from settings page
- Fix session cookie cache duration calculation (1 hour)

--- a/.env.example
+++ b/.env.example
@@ -21,3 +21,7 @@ BETTER_AUTH_SECRET=""
 NEXT_PUBLIC_GOOGLE_CLIENT_ID=""
 # Client secret is server-side only
 GOOGLE_CLIENT_SECRET=""
+
+# Optional: Disable email/password signup (login will still work)
+# Set to "true" to disable, leave empty or "false" to enable
+NEXT_PUBLIC_DISABLE_EMAIL_SIGNUP="false"
