feat: redirect signup to dashboard for consistent account checking
- Update signup form to redirect to /dashboard instead of /onboarding
- Both email and Google OAuth signup now use dashboard redirect
- Private layout will handle account check and redirect to onboarding if needed
- Format .env.example with organized sections and clear documentation
- Add NEXT_PUBLIC_APP_URL configuration
- Mark optional variables with comments

--- a/.env.example
+++ b/.env.example
@@ -1,27 +1,61 @@
+# ==========================================
+# Environment Configuration
+# ==========================================
+# Note: Variables that are commented out (prefixed with #) are optional.
+# Uncomment and set them only if you need those features.
+
+# ==========================================
+# External Services
+# ==========================================
+
 # Trakt.tv client ID for media discovery
 NEXT_PUBLIC_TRAKT_CLIENT_ID=""
+
 # CORS proxy URL for external API requests
 NEXT_PUBLIC_CORS_PROXY_URL=""
-# Optional: Discord community invite URL
-NEXT_PUBLIC_DISCORD_URL=""
-# Optional: Analytics script URL
-NEXT_PUBLIC_ANALYTICS_SCRIPT=""
 
-# Database configuration (PostgreSQL)
+# Optional: Discord community invite URL
+# NEXT_PUBLIC_DISCORD_URL=""
+
+# Optional: Analytics script URL
+# NEXT_PUBLIC_ANALYTICS_SCRIPT=""
+
+# ==========================================
+# Database Configuration
+# ==========================================
+
+# PostgreSQL connection string
 # Format: postgresql://USER:PASSWORD@HOST:PORT/DATABASE
 DATABASE_URL="postgresql://user:password@localhost:5432/debridui"
 
-# Better Auth configuration
-# Generate a secret with: openssl rand -base64 32
+# ==========================================
+# Authentication (Better Auth)
+# ==========================================
+
+# Secret key for Better Auth (generate with: openssl rand -base64 32)
 BETTER_AUTH_SECRET=""
 
-# Optional: Google OAuth configuration
+# Application URL
+# Development: http://localhost:3000
+# Production: set to your actual domain (e.g., https://yourdomain.com)
+NEXT_PUBLIC_APP_URL="http://localhost:3000"
+
+# ==========================================
+# OAuth Providers
+# ==========================================
+
+# Google OAuth configuration (optional)
 # Get credentials from: https://console.cloud.google.com/apis/credentials
 # Client ID is public and used in OAuth flows
-NEXT_PUBLIC_GOOGLE_CLIENT_ID=""
-# Client secret is server-side only
-GOOGLE_CLIENT_SECRET=""
+# NEXT_PUBLIC_GOOGLE_CLIENT_ID=""
 
-# Optional: Disable email/password signup (login will still work)
+# Client secret is server-side only
+# GOOGLE_CLIENT_SECRET=""
+
+# ==========================================
+# Feature Flags
+# ==========================================
+
+# Disable email/password signup (login will still work)
 # Set to "true" to disable, leave empty or "false" to enable
-NEXT_PUBLIC_DISABLE_EMAIL_SIGNUP="false"
+# NEXT_PUBLIC_DISABLE_EMAIL_SIGNUP="false"
