--- a/package.json
+++ b/package.json
@@ -20,13 +20,12 @@
     "scripts": {
         "dev": "next dev",
         "build": "next build",
-        "start": "next start",
+        "start": "node .next/standalone/server.js",
+        "postbuild": "cp -r .next/static .next/standalone/.next/static && cp -r public .next/standalone/public",
         "lint": "tsc --noEmit && eslint .",
-        "lint:fix": "eslint . --fix",
         "lint:eslint": "eslint .",
         "lint:types": "tsc --noEmit",
         "prettier": "prettier --write . --ignore-path .gitignore",
-        "typecheck": "tsc --noEmit",
         "update": "bunx next upgrade && bun update"
     },
     "dependencies": {
