--- a/package.json
+++ b/package.json
@@ -20,13 +20,19 @@
     "scripts": {
         "dev": "next dev",
         "build": "next build",
+        "build:standalone": "BUILD_STANDALONE=true next build",
         "start": "node .next/standalone/server.js",
         "postbuild": "cp -r .next/static .next/standalone/.next/static && cp -r public .next/standalone/public",
         "lint": "tsc --noEmit && eslint .",
         "lint:eslint": "eslint .",
         "lint:types": "tsc --noEmit",
         "prettier": "prettier --write . --ignore-path .gitignore",
-        "update": "bunx next upgrade && bun update"
+        "typecheck": "tsc --noEmit",
+        "update": "bunx next upgrade && bun update",
+        "cf:build": "opennextjs-cloudflare build",
+        "cf:dev": "bun run cf:build && wrangler dev",
+        "cf:preview": "opennextjs-cloudflare preview",
+        "cf:deploy": "opennextjs-cloudflare deploy"
     },
     "dependencies": {
         "@bprogress/next": "^3.2.12",
@@ -74,6 +80,7 @@
         "zustand": "^5.0.10"
     },
     "devDependencies": {
+        "@opennextjs/cloudflare": "^1.16.0",
         "@tailwindcss/postcss": "^4.1.18",
         "@types/node": "^20.19.30",
         "@types/react": "19.2.8",
@@ -86,7 +93,8 @@
         "shadcn": "^3.7.0",
         "tailwindcss": "^4.1.18",
         "tw-animate-css": "^1.4.0",
-        "typescript": "^5.9.3"
+        "typescript": "^5.9.3",
+        "wrangler": "^4.61.0"
     },
     "overrides": {
         "@types/react": "19.2.8",
