--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "scripts": {
         "dev": "next dev",
         "build": "next build",
+        "build:standalone": "BUILD_STANDALONE=true next build",
         "start": "next start",
         "lint": "tsc --noEmit && eslint .",
         "lint:fix": "eslint . --fix",
@@ -27,7 +28,11 @@
         "lint:types": "tsc --noEmit",
         "prettier": "prettier --write . --ignore-path .gitignore",
         "typecheck": "tsc --noEmit",
-        "update": "bunx next upgrade && bun update"
+        "update": "bunx next upgrade && bun update",
+        "cf:build": "opennextjs-cloudflare build",
+        "cf:dev": "bun run cf:build && wrangler dev",
+        "cf:preview": "opennextjs-cloudflare preview",
+        "cf:deploy": "opennextjs-cloudflare deploy"
     },
     "dependencies": {
         "@bprogress/next": "^3.2.12",
@@ -71,6 +76,7 @@
         "zustand": "^5.0.10"
     },
     "devDependencies": {
+        "@opennextjs/cloudflare": "^1.16.0",
         "@tailwindcss/postcss": "^4.1.18",
         "@types/node": "^20.19.30",
         "@types/react": "19.2.8",
@@ -82,7 +88,8 @@
         "shadcn": "^3.7.0",
         "tailwindcss": "^4.1.18",
         "tw-animate-css": "^1.4.0",
-        "typescript": "^5.9.3"
+        "typescript": "^5.9.3",
+        "wrangler": "^4.61.0"
     },
     "overrides": {
         "@types/react": "19.2.8",
