feat: add continue watching with performance optimizations
- Add playback history tracking with database schema and cleanup trigger
- Implement continue watching section on dashboard with carousel UI
- Add React.cache() to deduplicate server-side DB queries per request
- Memoize streaming requests to prevent unnecessary re-renders

--- a/package.json
+++ b/package.json
@@ -26,7 +26,11 @@
         "lint:eslint": "eslint .",
         "lint:types": "tsc --noEmit",
         "prettier": "prettier --write . --ignore-path .gitignore",
-        "update": "bunx next upgrade && bun update"
+        "update": "bunx next upgrade && bun update",
+        "db:generate": "drizzle-kit generate",
+        "db:migrate": "drizzle-kit migrate",
+        "db:push": "drizzle-kit push",
+        "db:studio": "drizzle-kit studio"
     },
     "dependencies": {
         "@bprogress/next": "^3.2.12",
