--- a/package.json
+++ b/package.json
@@ -50,9 +50,9 @@
         "@radix-ui/react-switch": "^1.2.6",
         "@radix-ui/react-tabs": "^1.1.13",
         "@radix-ui/react-tooltip": "^1.2.8",
-        "@tanstack/react-query": "^5.90.20",
-        "@tanstack/react-query-persist-client": "^5.90.22",
-        "better-auth": "^1.4.18",
+        "@tanstack/react-query": "^5.90.21",
+        "@tanstack/react-query-persist-client": "^5.90.23",
+        "better-auth": "^1.5.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "cmdk": "^1.1.1",
@@ -69,32 +69,39 @@
         "postgres": "^3.4.8",
         "react": "19.2.4",
         "react-dom": "19.2.4",
-        "react-dropzone": "^14.4.0",
-        "react-hook-form": "^7.71.1",
+        "react-dropzone": "^14.4.1",
+        "react-hook-form": "^7.71.2",
         "react-window": "^1.8.11",
         "sonner": "^2.0.7",
-        "tailwind-merge": "^3.4.0",
+        "tailwind-merge": "^3.5.0",
         "uuid": "^13.0.0",
         "zod": "^4.3.6",
         "zustand": "^5.0.11"
     },
     "devDependencies": {
-        "@tailwindcss/postcss": "^4.1.18",
-        "@types/node": "^20.19.30",
+        "@tailwindcss/postcss": "^4.2.1",
+        "@types/node": "^20.19.35",
         "@types/react": "19.2.10",
         "@types/react-dom": "19.2.3",
         "@types/react-window": "^1.8.8",
-        "drizzle-kit": "^0.31.8",
-        "eslint": "^9.39.2",
+        "drizzle-kit": "^0.31.9",
+        "eslint": "^9.39.3",
         "eslint-config-next": "16.1.6",
         "prettier": "^3.8.1",
-        "shadcn": "^3.8.1",
-        "tailwindcss": "^4.1.18",
+        "shadcn": "^3.8.5",
+        "tailwindcss": "^4.2.1",
         "tw-animate-css": "^1.4.0",
         "typescript": "^5.9.3"
     },
-    "overrides": {
-        "@types/react": "19.2.10",
-        "@types/react-dom": "19.2.3"
+    "nizm": {
+        "hooks": {
+            "prettier": {
+                "cmd": "bunx prettier --write {staged_files}",
+                "glob": "*.{js,jsx,ts,tsx,mjs,cjs,css,scss,less,html,json,md,yaml,yml,graphql,vue,svelte}"
+            },
+            "lint": {
+                "cmd": "bun run lint"
+            }
+        }
     }
 }
